--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 ---
 site_name: Flexible Softwarearchitektur Training
-site_url: https://github.com/MatthiasEschhold/flexible-softwarearchitektur-training
+site_url: https://matthiaseschhold.github.io/flexible-softwarearchitektur-training/
 repo_url: https://github.com/MatthiasEschhold/flexible-softwarearchitektur-training.git
 repo_name: MatthiasEschhold/flexible-softwarearchitektur-training
 edit_uri: edit/develop/documentation/docs/
