--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <domainprimitives-java.version>0.1.0</domainprimitives-java.version>
         <maven-surefire-plugin.version>3.2.2</maven-surefire-plugin.version>
         <jgiven-junit.version>1.3.1</jgiven-junit.version>
+        <version.mockito>3.3.3</version.mockito>
     </properties>
     <dependencies>
         <dependency>
@@ -69,6 +70,12 @@
             <groupId>com.tngtech.jgiven</groupId>
             <artifactId>jgiven-junit5</artifactId>
             <version>${jgiven-junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${version.mockito}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
