improved description of lab 3

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,7 +54,7 @@ nav:
   - Aufgabenbeschreibung: 'mkdocs.md'
   - Aufgabe 1 Domänenmodell: 'docs/lab1/lab1.md'
   - Aufgabe 2 Anwendungsfälle: 'docs/lab2/lab2.md'
-  - Adapters: 'docs/lab3/lab3.md'
-  - Wachstum des Domain Module: 'docs/lab4/lab4.md'
-  - Wachstum des Systems: 'docs/lab5/lab5.md'
+  - Aufgabe 3 Implementierung der Interface Adapters: 'docs/lab3/lab3.md'
+  - Aufgabe 4 Weitere Anwendungsfälle: 'docs/lab4/lab4.md'
+  - Aufgabe 5 Fachliche Modularisierung bei Systemwachstum: 'docs/lab5/lab5.md'
   - Git Utils: 'docs/help/git.md'
